[gd_scene load_steps=2 format=3 uid="uid://ltn2afwhbxe"]

[ext_resource type="Script" path="res://scenes/tempmain/tempmain.gd" id="1_qfhff"]

[node name="tempmain" type="Node2D"]
script = ExtResource("1_qfhff")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ui/CenterContainer"]
layout_mode = 2

[node name="button_raw_resource_viewer" type="Button" parent="CanvasLayer/ui/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Raw Resource Viewer"

[node name="button_level_cell_tester" type="Button" parent="CanvasLayer/ui/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Cell Tester
"

[node name="button_back" type="Button" parent="CanvasLayer/ui/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CanvasLayer/ui/CenterContainer/VBoxContainer/button_level_cell_tester" to="." method="_on_button_level_cell_tester_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/CenterContainer/VBoxContainer/button_back" to="." method="_on_button_back_pressed"]
